// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Cdk8sLibrary Basic Configuration should create cdk8s library with default settings 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node src/main.ts
imports:
  - k8s@1.30.0
"
`;

exports[`Cdk8sLibrary Basic Configuration should create cdk8s library with default settings 2`] = `
"import { App, Chart, ChartProps, ApiObject } from 'cdk8s';
import { Construct } from 'constructs';

export class MyChart extends Chart {
  constructor(scope: Construct, id: string, props: ChartProps = {}) {
    super(scope, id, props);

    const label = { app: 'hello-k8s' };

    new ApiObject(this, 'deployment', {
      apiVersion: 'v1',
      kind: 'Pod',
      metadata: {
        namespace: 'frontend',
        name: 'nginx',
        labels: label,
      },
      spec: {
        containers: [
          {
            name: 'nginx',
            image: 'nginx:1.14-alpine',
            resources: {
              limits: {
                memory: '20Mi',
                cpu: 0.2,
              },
            },
          },
        ],
      },
    });
  }
}

const app = new App();
new MyChart(app, 'hello');
app.synth();
"
`;

exports[`Cdk8sLibrary Basic Configuration should create cdk8s library with default settings 3`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "author": {
    "email": "test@example.com",
    "name": "test-author",
    "organization": false,
  },
  "dependencies": {
    "cdk8s": "*",
    "cdk8s-plus-30": "*",
    "constructs": "^10.4.2",
  },
  "devDependencies": {
    "@types/jest": "*",
    "@types/node": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk-lib": "2.1.0",
    "cdk8s-cli": "*",
    "commit-and-tag-version": "^12",
    "eslint": "^9",
    "eslint-config-prettier": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-prettier": "*",
    "jest": "*",
    "jest-junit": "^16",
    "jsii": "~5.8.0",
    "jsii-diff": "*",
    "jsii-docgen": "^10.5.0",
    "jsii-pacmak": "*",
    "jsii-rosetta": "~5.8.0",
    "prettier": "*",
    "projen": "*",
    "ts-jest": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "jsii": {
    "outdir": "dist",
    "targets": {},
    "tsc": {
      "outDir": "lib",
      "rootDir": "src",
    },
  },
  "keywords": [
    "cdk",
  ],
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "test-cdk8s-library",
  "peerDependencies": {
    "aws-cdk-lib": "^2.1.0",
    "constructs": "^10.0.5",
  },
  "publishConfig": {
    "access": "public",
  },
  "repository": {
    "type": "git",
    "url": "https://github.com/test/test-cdk8s-library.git",
  },
  "scripts": {
    "build": "npx projen build",
    "bump": "npx projen bump",
    "cdk8s": "npx projen cdk8s",
    "cdk8s:import": "npx projen cdk8s:import",
    "cdk8s:synth": "npx projen cdk8s:synth",
    "clobber": "npx projen clobber",
    "compat": "npx projen compat",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "docgen": "npx projen docgen",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "package-all": "npx projen package-all",
    "package:js": "npx projen package:js",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "release": "npx projen release",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "unbump": "npx projen unbump",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "stability": "stable",
  "types": "lib/index.d.ts",
  "version": "0.0.0",
}
`;

exports[`Cdk8sLibrary Cdk8s Configuration Options should configure custom cdk8s options 1`] = `
"import { App, Chart, ChartProps, ApiObject } from 'cdk8s';
import { Construct } from 'constructs';

export class MyChart extends Chart {
  constructor(scope: Construct, id: string, props: ChartProps = {}) {
    super(scope, id, props);

    const label = { app: 'hello-k8s' };

    new ApiObject(this, 'deployment', {
      apiVersion: 'v1',
      kind: 'Pod',
      metadata: {
        namespace: 'frontend',
        name: 'nginx',
        labels: label,
      },
      spec: {
        containers: [
          {
            name: 'nginx',
            image: 'nginx:1.14-alpine',
            resources: {
              limits: {
                memory: '20Mi',
                cpu: 0.2,
              },
            },
          },
        ],
      },
    });
  }
}

const app = new App();
new MyChart(app, 'hello');
app.synth();
"
`;

exports[`Cdk8sLibrary Cdk8s Configuration Options should configure custom cdk8s options 2`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node src/k8s/app.ts
imports:
  - k8s@1.31.0
  - custom-resource@1.0.0
"
`;

exports[`Cdk8sLibrary Combined Configuration should handle cdk8s options with prettier and vscode configurations together 1`] = `
{
  "bracketSpacing": true,
  "overrides": [],
  "semi": true,
  "singleQuote": true,
  "trailingComma": "all",
}
`;

exports[`Cdk8sLibrary Combined Configuration should handle cdk8s options with prettier and vscode configurations together 2`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "editor.defaultFormatter": "esbenp.prettier-vscode",
  "editor.formatOnSave": true,
  "editor.indentSize": 2,
  "eslint.nodePath": "./node_modules",
  "eslint.useFlatConfig": false,
}
`;

exports[`Cdk8sLibrary Combined Configuration should handle cdk8s options with prettier and vscode configurations together 3`] = `
{
  "recommendations": [
    "amazonwebservices.aws-toolkit-vscode",
    "DanielThielking.aws-cloudformation-yaml",
    "ms-azuretools.vscode-containers",
    "dbaeumer.vscode-eslint",
    "mhutchie.git-graph",
    "github.vscode-github-actions",
    "GitHub.vscode-pull-request-github",
    "eamodio.gitlens",
    "esbenp.prettier-vscode",
    "spmeesseman.vscode-taskexplorer",
    "wayou.vscode-todo-highlight",
    "vscode-icons-team.vscode-icons",
    "ms-vscode-remote.vscode-remote-extensionpack",
  ],
}
`;

exports[`Cdk8sLibrary Combined Configuration should handle cdk8s options with prettier and vscode configurations together 4`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node src/k8s/main.ts
imports:
  - k8s@1.31.0
"
`;

exports[`Cdk8sLibrary Prettier Configuration should configure prettier with default options when not specified 1`] = `
{
  "bracketSpacing": true,
  "overrides": [],
  "semi": true,
  "singleQuote": true,
  "trailingComma": "all",
}
`;

exports[`Cdk8sLibrary VSCode Configuration should configure VSCode settings and extensions by default 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "editor.defaultFormatter": "esbenp.prettier-vscode",
  "editor.formatOnSave": true,
  "editor.indentSize": 2,
  "eslint.nodePath": "./node_modules",
  "eslint.useFlatConfig": false,
}
`;

exports[`Cdk8sLibrary VSCode Configuration should configure VSCode settings and extensions by default 2`] = `
{
  "recommendations": [
    "amazonwebservices.aws-toolkit-vscode",
    "DanielThielking.aws-cloudformation-yaml",
    "ms-azuretools.vscode-containers",
    "dbaeumer.vscode-eslint",
    "mhutchie.git-graph",
    "github.vscode-github-actions",
    "GitHub.vscode-pull-request-github",
    "eamodio.gitlens",
    "esbenp.prettier-vscode",
    "spmeesseman.vscode-taskexplorer",
    "wayou.vscode-todo-highlight",
    "vscode-icons-team.vscode-icons",
    "ms-vscode-remote.vscode-remote-extensionpack",
  ],
}
`;
